# noga

./: .gitignore  CLAUDE.md  README.md  TODO.md  Taskfile.yml  pyproject.toml  readme.yml
data/: cost.csv  data.csv  error.csv  error_by_month.csv  ims.csv  ims.he.csv  pred-new.csv  pred.csv
lightning_logs/version_0/checkpoints/: epoch=9-step=40.ckpt
noga/: __init__.py  cost.py  data.py  date.py  error.py  main.py  model.py  plot.py  stat.py
